[OPENMEETINGS-2577] sonar should be more happy